<resources>
    <string name="app_name">Demenz Tester</string>
    <string name="start_MMSE">Start MMST</string>
    <string name="open_resultview">Vorherige Tests </string>
    <string name="title_activity_mmst">MMST</string>

    <string name="notEmptyError">Dieses Feld darf nicht leer sein.</string>
    <string name="impossibleInputError">Problem mit der Angabe. Bitte prüfen Sie diese Angabe.</string>
    <string name="dialog_noAgreement_title">Kein Einverständnis?</string>
    <string name="dialog_noAgreement_message">Ist der Patient wirklich nicht einverstanden? \nWenn ja, wird der Test hier beendet.</string>
    <string name="dialog_ok">Einverständnis bekommen</string>
    <string name="dialog_cancel">Test abbrechen</string>
    <string name="dialog_voiceInput">Sprechen Sie jetzt.</string>
    <string name="nextBtn">Weiter</string>

    <string name="dateLbl">Datum</string>
    <string name="expertNameLbl">Gutachter</string>
    <string name="expertNameInput">Name/ID des Gutachters</string>
    <string name="patientHeaderLbl">Patientendaten</string>
    <string name="patientNameLbl">Nachname</string>
    <string name="patientNameInput">Nachname</string>
    <string name="patientFirstnameLbl">Vorname</string>
    <string name="patientFirstnameInput">Vorname</string>
    <string name="patientAgeGroupLbl">Jahrgang</string>
    <string name="patientAgeGroupInput">1920</string>
    <string name="agreementLbl">Einverständnis</string>
    <string name="othersLbl">Sonstiges</string>

    <string name="taskClock_Uhrzeit">Bitte zeichnen Sie eine Uhr!</string>
    <!--string name="task01_Uhrzeit">Wie spät ist es? Malen Sie bitte eine Uhr.</string-->

    <string name="task01_year">Welches Jahr haben wir?</string>
    <string name="task01_season">Welche Jahreszeit haben wir?</string>
    <string name="task01_day">Den wievielten des Monats haben wir?</string>
    <string name="task01_weekday">Welcher Wochentag ist heute?</string>
    <string name="task01_month">Welcher Monat ist gerade?</string>

    <!--string name="task02_wo">Wo sind Sie gerade?</string-->
    <string name="task02_country">In welchem Land sind wir?</string>
    <string name="task02_canton">In welchem Kanton/Kreis sind wir?</string>
    <string name="task02_locality">In welcher Ortschaft sind wir?</string>
    <string name="task02_level">Auf welchem Stockwerk sind wir?</string>
    <string name="task02_adress">An welchem Ort (Name oder Adresse) befinden wir uns hier?</string>

    <string name="task03">Sagen Sie die folgenden Begriffe laut:</string>
    <string name="task03_words">Apfel, \nPfennig, \nTisch</string>
    <string name="task03_wordsApfel">Apfel</string>
    <string name="task03_wordsPfennig">Pfennig</string>
    <string name="task03_wordsTisch">Tisch</string>
    <string name="task03_memorize">Merken Sie sich die Begriffe!</string>

    <string name="task04">Subtrahieren sie 7 von </string>

    <string name="task05">Welche Begriffe sollten Sie sich merken? Wiederholen Sie diese laut.</string>

    <string name="task06_StiftArmbanduhr">Welchen Gegenstand sehen Sie auf dem Bild?</string>
    <string name="task06_Armbanduhr">Armbanduhr</string>
    <string name="task06_Uhr">Uhr</string>
    <string name="task06_Bleistift">Bleistift</string>
    <string name="task06_Stift">Stift</string>

    <string name="task07">Drücken Sie auf "Hören" und sprechen Sie die zu hörende Phrase nach.</string>
    <string name="task07_sound">Bitte keine Wenn und Aber</string>

    <string name="task08">Lassen Sie sich nun ein Blatt Papier geben:</string>
    <string name="task08_">Nehmen Sie das Blatt Papier in Ihre rechte Hand, \n falten Sie es mit beiden Händen und \n legen es dann auf Ihren Schoss!</string>

    <string name="task09">Lesen Sie die folgende Aufforderung und befolgen Sie sie:</string>
    <string name="task09_AugenZu">Schließen Sie Ihre Augen</string>

    <string name="task10">Formulieren Sie einen Satz und schreiben Sie ihn hier auf</string>
    <string name="task11">Zeichnen Sie zwei Fünfecke die sich überschneiden.</string>

    <string name="taskEnd">Test abgeschlossen!</string>

    <string name="title_activity_result_list">MMST Ergebnisse</string>
    <string name="result_openBtn">ÖFFNEN</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_expert_view">ExpertViewActivity</string>

</resources>
